# sanskrit_analyser

./: CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
.claude/: ralph-loop.local.md
.serena/: project.yml
.serena/memories/: workflow-conventions.md
api/: __init__.py
docker/: Dockerfile.api  Dockerfile.mcp  Dockerfile.ui  docker-compose.yml  nginx.conf
docs/plans/: 2026-02-01-sanskrit-analyzer-design.md  2026-02-02-mcp-server-and-training-design.md  2026-02-02-streamlit-ui-design.md
examples/: basic_usage.py  batch_analysis.py  integrate_ramayanam.py
ralph/: prd.json  progress.txt
ralph/ui/: prd.json  progress.txt
sanskrit_analyzer/: __init__.py  analyzer.py  config.py  tree_builder.py
sanskrit_analyzer/api/: __init__.py  app.py
sanskrit_analyzer/cache/: __init__.py  memory.py  redis_cache.py  sqlite_corpus.py  tiered.py
sanskrit_analyzer/data/: __init__.py  comprehensive_dhatu_database.db  dhatu_db.py  pratyayas.yaml  sandhi_rules.yaml  sutras.yaml
sanskrit_analyzer/disambiguation/: __init__.py  llm.py  pipeline.py  rules.py
sanskrit_analyzer/engines/: __init__.py  base.py  dharmamitra_engine.py  ensemble.py  heritage_engine.py  vidyut_engine.py
sanskrit_analyzer/mcp/: __init__.py  response.py  server.py  verbosity.py
sanskrit_analyzer/models/: __init__.py  dhatu.py  morphology.py  scripts.py  tree.py
sanskrit_analyzer/training/: README.md  __init__.py  cli.py  config.py  corpus_loader.py  data_generator.py  format_converter.py  reasoning_templates.py
sanskrit_analyzer/ui/: README.md  __init__.py  api_client.py  app.py  state.py  styles.py
sanskrit_analyzer/utils/: __init__.py  normalize.py  transliterate.py
tasks/: prd-sanskrit-mcp-server.md  prd-streamlit-ui.md
tests/: __init__.py  test_config.py
tests/mcp/: test_analysis_tools.py  test_dhatu_tools.py  test_grammar_tools.py  test_integration.py  test_resources.py
tests/test_analyzer/: __init__.py  test_analyzer.py
tests/test_api/: __init__.py  test_analyze.py  test_app.py  test_dhatu.py
tests/test_cache/: __init__.py  test_memory.py  test_redis_cache.py  (+2 more)
ui/: package-lock.json  package.json
(+51 files in other folders)
