[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanskrit-analyzer"
version = "0.1.0"
description = "Centralized Sanskrit sentence parser with 3-engine ensemble analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Naren Mudivarthy" }
]
keywords = ["sanskrit", "nlp", "parser", "linguistics", "sandhi", "dhatu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pydantic>=2.0",
    "indic-transliteration>=2.3.0",
    "vidyut>=0.4.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.35.0",
]
cache = [
    "redis>=5.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
all = [
    "sanskrit-analyzer[ml,cache,api]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/narenmudivarthy/sanskrit-analyzer"
Documentation = "https://github.com/narenmudivarthy/sanskrit-analyzer#readme"
Repository = "https://github.com/narenmudivarthy/sanskrit-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["sanskrit_analyzer"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
